--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,8 @@ title = "Hsu Group @ UW ECE"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "http://faculty.washington.edu/schsu"
+baseurl = "https://faculty.washington.edu/schsu"
+# baseurl = "https://schsu.web.cern.ch/schsu/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
